# ludicrypt-crypto-provider

./: .gitignore  CMakeLists.txt  LICENSE  Ludicrypt.sln  vcpkg.json
src/: CMakeLists.txt
src/Ludicrypt/: Ludicrypt.csproj  PluginLoadContext.cs  Program.cs
src/Ludicrypt.Backend.AzureKeyVault/: AzureKeyVaultProvider.cs  Ludicrypt.Backend.AzureKeyVault.csproj
src/Ludicrypt.Backend.Interface/: ICryptoProvider.cs  IKey.cs  Key.cs
src/Ludicrypt.Csp/: Ludicrypt.Csp.cpp  Ludicrypt.Csp.def  Ludicrypt.Csp.vcxproj  Ludicrypt.Csp.vcxproj.filters  pch.h
src/Ludicrypt.Ksp/: Ludicrypt.Ksp.cpp  Ludicrypt.Ksp.h  Ludicrypt.Ksp.vcxproj  Ludicrypt.Ksp.vcxproj.filters  pch.h
src/Ludicrypt.Ksp.Config/: Ludicrypt.Ksp.Config.cpp  Ludicrypt.Ksp.Config.vcxproj  Ludicrypt.Ksp.Config.vcxproj.filters
src/Ludicrypt/Properties/: launchSettings.json
src/Ludicrypt/Protos/: crypto_provider.proto
src/Ludicrypt/Services/: CryptoProviderService.cs
src/ludicrypt-client/: CMakeLists.txt
src/ludicrypt-pkcs11/: CMakeLists.txt  ludicrypt-pkcs11.cpp  ludicrypt-pkcs11.h
test/Ludicrypt.Ksp.Test/: Ludicrypt.Ksp.Test.vcxproj  pch.h  test.cpp
test/Ludicrypt.Pkcs11.Test/: Helpers.cs  Integration.cs  Ludicrypt.Pkcs11.Test.csproj
test/Ludicrypt.Test/: Integration.cs  Ludicrypt.Test.csproj  UnixDomainSocketConnectionFactory.cs
